--- a/assets/scss/components/_nav-category.scss
+++ b/assets/scss/components/_nav-category.scss
@@ -3,7 +3,9 @@
 .news,
 .services {
 	&__nav {
+		width: 100%;
 		margin-top: 2rem;
+		padding-bottom: 1rem;
 
 		ul {
 			max-width: 940px;
@@ -69,6 +71,13 @@
 					}
 				}
 			}
+		}
+
+		&--sticky {
+			position: sticky;
+			top: 0;
+			background-color: $G-01;
+			z-index: 2;
 		}
 	}
 }
