--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -252,7 +252,7 @@ header {
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
-				align-items: center;
+				align-items: flex-start;
 				height: 2rem;
 				background-color: $G-00;
 				opacity: 0;
@@ -262,21 +262,28 @@ header {
 					height: 100vh;
 					opacity: 1;
 					transition: 200ms ease-out;
-
-
 				}
 
 				& > li {
 					flex: 0;
 					opacity: 0;
 					top: -7vh;
-					left: -36vw;
+					left: -45vw;
+					font-size: 2em;
 					animation: enter 0.3s ease-out forwards;
 
 					@for $n from 1 through 6 {
 						&:nth-child(#{$n}) {
 							animation-delay: 0.1s * ($n - 1);
 						}
+					}
+
+					&.menu-item-has-children::after {
+						display: none;
+					}
+
+					&.menu-item-has-children:hover > ul {
+						display: none;
 					}
 
 					& + li {
@@ -345,12 +352,6 @@ ul.top-nav li.menu-item-has-children ul {
 			@include mobile {
 				padding: 0.75rem 0.5rem;
 				background: $S-02;
-				transform: background-color 200ms ease-out;
-
-				&:hover {
-					background-color: $G-00;
-					transform: background-color 200ms ease-out;
-				}
 			}
 		}
 
@@ -358,11 +359,6 @@ ul.top-nav li.menu-item-has-children ul {
 			padding: 0;
 			background: $S-02;
 		}
-	}
-
-	&:hover,
-	& > li:hover {
-		display: block;
 	}
 }
 
