--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -17,6 +17,18 @@ footer {
 		grid-template-columns: 8fr 2fr 2fr;
 		padding-bottom: 2rem;
 
+		@include mobile {
+			grid-template-areas:
+				"lg lg"
+				"p1 p1"
+				"p2 p2"
+				"p3 p3"
+				"p4 p4"
+				"menu address";
+			grid-template-columns: 1fr 1fr;
+			text-align: center;
+		}
+
 		& > a {
 			grid-area: lg;
 			display: block;
@@ -24,6 +36,10 @@ footer {
 			height: 40px;
 			background: url(../img/logo-white.svg) -10px -20px / cover no-repeat;
 			margin-bottom: 0.5rem;
+
+			@include mobile {
+				margin: 0 auto 1.5rem;
+			}
 		}
 
 		p {
@@ -31,6 +47,10 @@ footer {
 			font-size: 0.9em;
 			line-height: 1.25;
 			margin: 0.125rem 0;
+
+			@include mobile {
+				padding: 0.25rem 1rem;
+			}
 		}
 
 		p:nth-of-type(1) {
@@ -53,6 +73,11 @@ footer {
 			grid-area: menu;
 			text-transform: uppercase;
 
+			@include mobile {
+				margin-top: 1.5rem;
+			}
+
+
 			span {
 				color: $G-09;
 			}
@@ -72,6 +97,10 @@ footer {
 
 		address {
 			grid-area: address;
+
+			@include mobile {
+				margin-top: 1.5rem;
+			}
 
 			span {
 				color: $G-09;
@@ -105,6 +134,14 @@ footer {
 			align-items: center;
 			justify-content: space-between;
 			padding: 1.5rem 0 1.25em;
+
+			@include mobile {
+				flex-direction: column;
+
+				.copy {
+					margin-bottom: 1.5rem;
+				}
+			}
 		
 			ul li {
 				display: inline;
@@ -112,6 +149,7 @@ footer {
 
 				&:first-child {
 					border-right: 1px solid $G-01;
+					padding-left: 0;
 				}
 
 				&:last-child {
