--- a/assets/scss/components/_feedback.scss
+++ b/assets/scss/components/_feedback.scss
@@ -36,7 +36,7 @@
 
 			blockquote {
 				position: relative;
-				font-size: 0.75em;
+				font-size: 0.8em;
 				text-align: center;
 				quotes: "“" "”" "‘" "’";
 
@@ -59,6 +59,10 @@
 					width: 0;
 					height: 0;
 					visibility: hidden;
+				}
+
+				p {
+					min-height: 5.625rem;
 				}
 			}
 
